<resources>
    <string name="app_name">ProjectMSN</string>
    <string name="digite_email">Digite seu e-mail</string>
    <string name="digite_senha">Digite sua senha</string>
    <string name="botao_logar">Logar</string>
    <string name="nao_tem_conta">Não tem conta? Cadastre-se</string>
    <string name="digite_nome">Digite seu nome</string>
    <string name="botao_cadastrar">Cadastrar</string>
    <string name="pesquisar">Pesquisar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>